@@ -49,7 +49,7 @@ static char *function_db_read(struct ast_channel *chan, char *cmd, char *data, c
 	char *family;
 	char *key;
 
-	if (!data || ast_strlen_zero(data)) {
+	if (ast_strlen_zero(data)) {
 		ast_log(LOG_WARNING, "DB requires an argument, DB(<family>/<key>)\n");
 		return buf;
 	}
@@ -82,7 +82,7 @@ static void function_db_write(struct ast_channel *chan, char *cmd, char *data, c
 	char *family;
 	char *key;
 
-	if (!data || ast_strlen_zero(data)) {
+	if (ast_strlen_zero(data)) {
 		ast_log(LOG_WARNING, "DB requires an argument, DB(<family>/<key>)=<value>\n");
 		return;
 	}
@@ -128,7 +128,7 @@ static char *function_db_exists(struct ast_channel *chan, char *cmd, char *data,
 	char *family;
 	char *key;
 
-	if (!data || ast_strlen_zero(data)) {
+	if (ast_strlen_zero(data)) {
 		ast_log(LOG_WARNING, "DB_EXISTS requires an argument, DB(<family>/<key>)\n");
 		return buf;
 	}
